flux/apps/ext/traefik/dashboard-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik-ext
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: dashboard
      port: 8080
      targetPort: 8080
