flux/apps/ext/traefik/vpn-proxy.yaml
# Define all 
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-vpn
spec:
  type: ExternalName
  externalName: navidrome.vpn.fingol.pro
  ports:
    - name: https
      port: 443
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: navidrome-host-rewrite
spec:
  headers:
    customRequestHeaders:
      Host: navidrome.vpn.fingol.pro
---
apiVersion: v1
kind: Service
metadata:
  name: koito-vpn
spec:
  type: ExternalName
  externalName: koito.vpn.fingol.pro
  ports:
    - name: https
      port: 443
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: koito-host-rewrite
spec:
  headers:
    customRequestHeaders:
      Host: koito.vpn.fingol.pro
