flux/apps/ext/traefik/dashboard-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-ext
spec:
  parentRefs:
    - name: web
      namespace: traefik-ext
  hostnames:
    - fingol.pro
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: traefik-dashboard
          port: 8080
