flux/apps/ext/traefik/dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-ext
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.fingol.pro`)
#      middlewares:
#      - name: authelia-auth
#        namespace: traefik-auth
      kind: Rule
      services:
      - name: api@internal
        kind: TraefikService
  tls:
    secretName: letsencrypt-dns-wildcard-cert
